resources/web-rca/stage/web-rca-ui.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: web-rca
  name: web-rca-ui-staging
spec:
  host: web-rca.stage.devshift.net
  to:
    kind: Service
    name: web-rca-ui
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
