resources/web-rca/stage/web-rca.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: web-rca
  name: web-rca-staging
spec:
  host: qf6gtsaomwu9oys.api.stage.openshift.com
  to:
    kind: Service
    name: web-rca
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
